# rag_with_langchain

./: README.md  pyproject.toml  requirements.txt
src/: vectorstore.py
