[project]
name = "rag-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-groq>=1.0.1",
    "pymupdf>=1.26.6",
    "pypdf>=6.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.1.2",
    "typesense>=1.2.0",
]
